--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -37,9 +37,9 @@ body {
         li {
           display: inline-block;
           margin-bottom: 0;
-          
+
           a {
-            color: rgba(0,0,0,.5);
+            color: rgba(0,0,0,.54);
             transition: .1s color linear;
 
             &:hover {
@@ -59,8 +59,8 @@ body {
           margin-left: 5px;
 
           a {
-            color: rgba(0,0,0,.4);
-            font-size: 28px;            
+            color: rgba(0,0,0,.54);
+            font-size: 28px;
           }
         }
       }
@@ -76,10 +76,8 @@ body {
           &:last-of-type {
             margin-right: 0;
           }
-          
-          a {
-            
 
+          a {
             &:hover {
               border-bottom: 1px dashed black;
             }
@@ -98,7 +96,7 @@ body {
     .tagline {
       flex: 1 auto;
       margin-top: 20px;
-      color: rgba(0,0,0,.35);
+      color: rgba(0,0,0,.54);
     }
   }
 }
